# cloudformation-cli-rust-plugin-for-cloudformation-resource-type-providers-in-rust

./: .gitignore  CONTRIBUTING.md  DEVELOPING.md  README.md
plugin/: Cargo.toml
plugin/src/: main.rs
plugin/test_inputs/: delete_handler.json  handler.json  template.yaml
rpdk_shim/: .cfn_metadata.json  .rpdk-config  schema.json
